[package]
name = "Ring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
env_logger = "0.10.0"
log = "0.4.17"
clap = { version = "4.1.1", features = ["derive"] }
futures = "0.3.25"

[build-dependencies]
tonic-build = "0.8"
